--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -1,14 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto:500&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Anton|Roboto:500&display=swap');
 
 body { 
 	background: #BBD3FF;
-	font-family: Roboto;
+	font-family: Roboto; sans-serif;
 	font-size: 20px;
 }
 
 p {
-	font-family: Roboto;
+	font-family: Roboto; sans-serif;
 	font-size: 20px;
 }
 
@@ -17,7 +18,7 @@ ul {
 }
 
 li {
-	font-family: Roboto;
+	font-family: Roboto; sans-serif;
 	font-size: 18px;
 }
 
@@ -27,7 +28,7 @@ img {
 
 h1 {
 	color: #000000;
-	font-family: Antonio;
+	font-family: Anton; sans-serif;
 	font-size: 65px;
 	font-weight: bold;
 	text-align: center;
@@ -37,7 +38,7 @@ h1 {
 
 #mainMenu {
 	color: #000000;
-	font-family: Antonio;
+	font-family: Anton; sans-serif;
 	font-size: 25px;
 	font-weight: bold;
 	text-align: center;
@@ -55,7 +56,7 @@ h1 {
 }
 
 #slogan {
-		font-family: Antonio;
+		font-family: Anton; sans-serif;
 		font-size: 30px;
 		font-weight: bold;
 }
