--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto:500&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Anton|Roboto:500&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Anton&display=swap');
 
 body { 
 	background: #BBD3FF;
