--- a/crandall_guide_to_food/css/style.css
+++ b/crandall_guide_to_food/css/style.css
@@ -1,6 +1,6 @@
 body {
 	background: ;
-	font-family: ;
+	font-family: sans-serif;
 	font-size: ;
 	padding: ;
 	margin: ;
@@ -9,7 +9,7 @@ body {
 .wrapper h1 {
 	background: ;
 	color: ;
-	font-family: ;
+	font-family: sans-serif;
 	font-size: ;
 
 }
@@ -17,7 +17,7 @@ body {
 .wrapper nav {
 	background: ;
 	color: ;
-	font-family: ;
+	font-family: sans-serif;
 	font-size: ;
 
 }
@@ -31,12 +31,24 @@ body {
 }
 
 h2 {
-	font-family: ;
+	font-family: sans-serif;
 	font-size: ;
 }
 
 h3 {
-	font-family: ;
+	font-family: sans-serif;
 	font-size: ;
+}
+
+ul {
+
+}
+
+.boxtype {
+	font-family: sans-serif;
+	font-size: ;
+	border: 5px solid black;
+	padding: 10px; 
+	margin: 10px;
 }
 
