--- a/crandall_guide_to_food/css/style.css
+++ b/crandall_guide_to_food/css/style.css
@@ -1,31 +1,54 @@
 body {
 	background-color: rgb(135,206,235);
+	color: #14417F;
 	font-family: sans-serif;
-	font-size: 16px;
+	font-size: 20px;
 }
 
 .wrapper h1 {
-	background: ;
-	color: ;
+	background: rgb(135,206,235);
+	color: #14417F;
 	font-family: sans-serif;
-	font-size: ;
-
+	font-size: 50;
+	font-weight: bold;
+	text-align: center;
+	text-transform: uppercase;	
 }
 
 .wrapper nav {
-	background-color: #45ff44;
-	font-color: #ffffff;
+	background: rgb(135,206,235);
+	color: #14417F;
 	font-family: sans-serif;
-	font-size: ;
+	font-size: 28px;
+	font-weight: bold;
+	float: center;
+	text-align: center;
+	text-transform: uppercase;
+	display: inline-block;
+	width: 100%;
+	padding: 20px;
 
 }
 
 .wrapper nav a{
-
+	background: rgb(135,206,235);
+	color: #14417F;
+	font-family: sans-serif;
+	font-size: 30px;
+	font-weight: bold;
+	text-decoration: none;
+	float: center;
+	display: inline-block;
 }
 
 .wrapper nav a:hover {
-	
+	background: #14417F;
+	color: #ffffff;
+	font-size: 30px;
+	font-weight: bold;
+	text-decoration: none;
+	float: center;
+	display: inline-block;
 }
 
 h1 {
@@ -34,8 +57,12 @@ h1 {
 }
 
 h2 {
+	background-color:#14417F;
+	color: #ffffff;
 	font-family: sans-serif;
 	font-size: 30px;
+	padding: 20px;
+	margin: 5px, 20px, 5px, 20px;
 }
 
 h3 {
@@ -50,8 +77,17 @@ ul {
 .boxtype {
 	font-family: sans-serif;
 	font-size: ;
-	border: 5px solid black;
+	border: 3px solid black;
 	padding: 10px; 
 	margin: 10px;
+}
+
+/* Single-direction drop shadow */
+
+hr.style-four {
+    height: 12px;
+    border: 0;
+    box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.9);
+    color: black;
 }
 
