--- a/crandall_guide_to_food/css/style.css
+++ b/crandall_guide_to_food/css/style.css
@@ -39,7 +39,8 @@ body {
 	text-decoration: none;
 	float: center;
 	display: inline-block;
-	padding-right: 30px;
+	padding-right: 15px;
+	padding-left: 15px;
 }
 
 .wrapper nav a:hover {
